--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <h1>Panda17TK</h1>
         <h3>my storeroom</h3>
     </main>
-    <script src="script.js" type="module"></script>
+    <script src="/main/script.js" type="module"></script>
 </body>
 </html>
