--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="https://twitter.com/">Works</a></li>
+                <li><a href="https://twitter.com/">Biography</a></li>
                 <li><a href="https://github.com/Panda17TK">GitHub</a></li>
                 <li><a href="https://twitter.com/">Twitter</a></li>
+                <li><a href="https://www.instagram.com/">Instagram</a></li>
             </ul>
         </nav>
     </header>
